# Treppo

./: README.md  manage.py  pyproject.toml
Treppo/: asgi.py  settings.py  urls.py  wsgi.py
TreppoApp/: admin.py  apps.py  commands.py  models.py  routes.py  types.py  views.py
TreppoApp/forms/: __init__.py  card.py  category.py  project.py
TreppoApp/migrations/: 0001_initial.py
TreppoApp/static/: main.css
TreppoApp/templates/card/: create.jinja  edit.jinja  show.jinja
TreppoApp/templates/category/: create.jinja  edit.jinja
TreppoApp/templates/common/: not_found.jinja
TreppoApp/templates/projects/: all.jinja  create.jinja  edit.jinja  show.jinja
TreppoApp/templates/skeletons/: main.jinja
TreppoApp/templatetags/: tvar.py
